# python-ai-cicd-template

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.claude/: CLAUDE.md
.github/workflows/: api-docs.yml  ci.yml  cost-gate.yml  deploy-render.yml  docker-build.yml  health-monitor.yml  integration-tests.yml  release.yml  security.yml
src/: __init__.py  app.py  config.py
tests/integration/: test_placeholder.py
tests/unit/: test_app.py  test_health.py
